fix navbar z-index

--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -3,6 +3,7 @@
 
 .navbar {
   height: auto;
+  z-index: 1000;
 
   @include sm-size {
     top: 50px;
